syntax = "proto3";

package com.itrjp.im.proto.service;
option java_outer_classname = "MessageRpcService";
import 'dto/message.proto';


service Message{
  // onMessage
  rpc onMessage(MessageRequest) returns (OnMessageResponse){}

  // 上下线
  rpc onNotice(EventRequest) returns (OnNoticeResponse){}
}

message OnMessageResponse{
  int32 code = 1;
  string message = 2;
  string messageId = 3;
}

message OnNoticeResponse{
  int32 code = 1;
  string message = 2;
}

message EventRequest{
  string channelId = 1; // 频道id
  string userId = 2; // 用户id
  dto.EventType type = 3; // 操作类型

}

message MessageRequest{
  string channelId = 1; // 频道ID
  string userId = 2; // 用户ID
  string content = 3; // 消息体
  string from = 4;
  string to = 5;
  int64 msgId = 6;
  int64 timestamp = 7;
}

